[package]
name = "catena-client"
version = "0.1.0"
authors = ["ZhengLu"]
edition = "2018"

[dependencies]
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }

sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }

sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-service = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.11" }

pallet-mmr-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }

beefy-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }

# Polkadot Runtimes
catena-runtime = { path = "../../runtime", optional = true }
#kusama-runtime = { path = "../../runtime/kusama", optional = true }
#westend-runtime = { path = "../../runtime/westend", optional = true }
#rococo-runtime = { path = "../../runtime/rococo", optional = true }

polkadot-primitives = { path = "../../polkadot/primitives" }

[features]
default = ["catena"]
catena = ["catena-runtime"]
#kusama = ["kusama-runtime"]
#rococo = ["rococo-runtime"]
#westend = ["westend-runtime"]
