[package]
name = "catena-service"
version = "0.1.0"
authors = ["ZhengLu"]
edition = "2018"

[dependencies]
# Substrate Client
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
babe = { package = "sc-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
beefy-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
beefy-gadget = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-consensus-uncles = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
service = { package = "sc-service", git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.11" }
telemetry = { package = "sc-telemetry", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }

# Substrate Primitives
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }

# Substrate Pallets
pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-mmr-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }

# Substrate Other
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }

# External Crates
futures = "0.3.17"
hex-literal = "0.3.3"
tracing = "0.1.28"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.26"
kvdb = "0.10.0"
kvdb-rocksdb = { version = "0.14.0", optional = true }
async-trait = "0.1.51"
lru = "0.6"

# Polkadot
polkadot-node-core-parachains-inherent = { path = "../../polkadot/node/core/parachains-inherent" }
polkadot-overseer = { path = "../../polkadot/node/overseer" }
catena-client = { path = "../client", default-features = false, optional = true }
polkadot-parachain = { path = "../../polkadot/parachain" }
polkadot-primitives = { path = "../../polkadot/primitives" }
polkadot-node-primitives = { path = "../../polkadot/node/primitives" }
polkadot-rpc = { path = "../../polkadot/rpc" }
polkadot-subsystem = { package = "polkadot-node-subsystem", path = "../../polkadot/node/subsystem" }
polkadot-node-subsystem-util = { path = "../../polkadot/node/subsystem-util" }
polkadot-runtime-parachains = { path = "../../polkadot/runtime/parachains" }
polkadot-node-network-protocol = { path = "../../polkadot/node/network/protocol" }

# Polkadot Runtimes
catena-runtime = { path = "../../runtime", optional = true }
#kusama-runtime = { path = "../../polkadot/runtime/kusama", optional = true }
#westend-runtime = { path = "../../polkadot/runtime/westend", optional = true }
#rococo-runtime = { path = "../../polkadot/runtime/rococo", optional = true }

# Polkadot Subsystems
polkadot-approval-distribution = { path = "../../polkadot/node/network/approval-distribution", optional = true }
polkadot-availability-bitfield-distribution = { path = "../../polkadot/node/network/bitfield-distribution", optional = true }
polkadot-availability-distribution = { path = "../../polkadot/node/network/availability-distribution", optional = true }
polkadot-availability-recovery = { path = "../../polkadot/node/network/availability-recovery", optional = true }
polkadot-collator-protocol = { path = "../../polkadot/node/network/collator-protocol", optional = true }
polkadot-dispute-distribution = { path = "../../polkadot/node/network/dispute-distribution", optional = true }
polkadot-gossip-support = { path = "../../polkadot/node/network/gossip-support", optional = true }
polkadot-network-bridge = { path = "../../polkadot/node/network/bridge", optional = true }
polkadot-node-collation-generation = { path = "../../polkadot/node/collation-generation", optional = true }
polkadot-node-core-approval-voting = { path = "../../polkadot/node/core/approval-voting", optional = true }
polkadot-node-core-av-store = { path = "../../polkadot/node/core/av-store", optional = true }
polkadot-node-core-backing = { path = "../../polkadot/node/core/backing", optional = true }
polkadot-node-core-bitfield-signing = { path = "../../polkadot/node/core/bitfield-signing", optional = true }
polkadot-node-core-candidate-validation = { path = "../../polkadot/node/core/candidate-validation", optional = true }
polkadot-node-core-chain-api = { path = "../../polkadot/node/core/chain-api", optional = true }
polkadot-node-core-chain-selection = { path = "../../polkadot/node/core/chain-selection", optional = true }
polkadot-node-core-dispute-coordinator = { path = "../../polkadot/node/core/dispute-coordinator", optional = true }
polkadot-node-core-dispute-participation = { path = "../../polkadot/node/core/dispute-participation", optional = true }
polkadot-node-core-provisioner = { path = "../../polkadot/node/core/provisioner", optional = true }
polkadot-node-core-runtime-api = { path = "../../polkadot/node/core/runtime-api", optional = true }
polkadot-statement-distribution = { path = "../../polkadot/node/network/statement-distribution", optional = true }

[dev-dependencies]
polkadot-test-client = { path = "../../polkadot/node/test/client" }
polkadot-node-subsystem-test-helpers = { path = "../../polkadot/node/subsystem-test-helpers" }
env_logger = "0.9.0"
log = "0.4.14"
assert_matches = "1.5.0"

[features]
default = ["db", "full-node"]

db = [
	"service/db"
]

full-node = [
	"polkadot-node-core-av-store",
	"polkadot-node-core-approval-voting",
	"polkadot-availability-bitfield-distribution",
	"polkadot-availability-distribution",
	"polkadot-availability-recovery",
	"catena-client",
	"polkadot-collator-protocol",
	"polkadot-dispute-distribution",
	"polkadot-gossip-support",
	"polkadot-network-bridge",
	"polkadot-node-collation-generation",
	"polkadot-node-core-backing",
	"polkadot-node-core-bitfield-signing",
	"polkadot-node-core-candidate-validation",
	"polkadot-node-core-chain-api",
	"polkadot-node-core-chain-selection",
	"polkadot-node-core-dispute-coordinator",
	"polkadot-node-core-dispute-participation",
	"polkadot-node-core-provisioner",
	"polkadot-node-core-runtime-api",
	"polkadot-statement-distribution",
	"polkadot-approval-distribution",
	"kvdb-rocksdb"
]

light-node = []

# Configure the native runtimes to use. Polkadot is enabled by default.
#
# Validators require the native runtime currently
catena-native = [ "catena-runtime", "catena-client/catena" ]
#kusama-native = [ "kusama-runtime", "polkadot-client/kusama" ]
#westend-native = [ "westend-runtime", "polkadot-client/westend" ]
#rococo-native = [ "rococo-runtime", "polkadot-client/rococo" ]

runtime-benchmarks = [
	"catena-runtime/runtime-benchmarks",
#	"kusama-runtime/runtime-benchmarks",
#	"westend-runtime/runtime-benchmarks",
#	"rococo-runtime/runtime-benchmarks"
]
try-runtime = [
	"catena-runtime/try-runtime",
#	"kusama-runtime/try-runtime",
#	"westend-runtime/try-runtime",
#	"rococo-runtime/try-runtime",
]
malus = ["full-node"]
disputes = ["polkadot-node-core-dispute-coordinator/disputes"]
